syntax = "proto3";

package Muwesome.Rpc.LoginServer;

service AccountAuth {
  rpc Login (LoginRequest) returns (LoginResponse);

  rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bytes account_guid = 1;
}

message LogoutRequest {
  bytes account_guid = 1;
}

message LogoutResponse {
}