syntax = "proto3";

package Muwesome.Rpc.LoginServer;

service AccountAuthentication {
  rpc RegisterAuthSession (stream AuthRequest) returns (stream AuthResponse);
}

message AuthRequest {
  message Login {
    string username = 1;
    string password = 2;
  }

  message Logout {
    string username = 1;
  }

  oneof type {
    Login login = 1;
    Logout logout = 2;
  }
}

message AuthResponse {
  LoginResult result = 1;

  enum LoginResult {
    SUCCESS = 0;
    INVALID_PASSWORD = 1;
    INVALID_ACCOUNT = 2;
    ACCOUNT_IS_BLOCKED = 3;
    ACCOUNT_IS_ALREADY_CONNECTED = 4;
    ACCOUNT_IS_LOCKED_OUT = 5;
  }
}